[gd_scene load_steps=7 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]
[ext_resource path="res://Rune.tscn" type="PackedScene" id=2]
[ext_resource path="res://DebugText.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://success.ogg" type="AudioStream" id=5]
[ext_resource path="res://dotgrid.png" type="Texture" id=6]

[node name="Board" type="Node2D"]
script = ExtResource( 1 )
Rune = ExtResource( 2 )
DebugText = ExtResource( 3 )
boardSizeX = 5
boardSizeY = 15
boardInitSizeY = 5
runeSize = 64

[node name="DebugArea" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="Cursor" parent="." instance=ExtResource( 4 )]
z_index = 100

[node name="SuccessSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="RuneTrickleTimer" type="Timer" parent="."]

[node name="dotgrid" type="Sprite" parent="."]
position = Vector2( -96, -46 )
texture = ExtResource( 6 )
centered = false

